[package]
name = "user_utils"
version = "0.2.0"
edition = "2021"
categories = ["os"]
description = "Utility library for accessing system users and groups"
exclude = ["/.github/"]
homepage = "https://github.com/bydlw98/user_utils"
keywords = ["bindings", "users", "groups"]
license = "MIT OR Apache-2.0"
readme = "README.md"
repository = "https://github.com/bydlw98/user_utils"
rust-version = "1.70.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
libc = "0.2.153"

[target.'cfg(windows)'.dependencies]
windows-sys = { version = "0.52.0", features = [
    "Win32_Foundation",
    "Win32_Security",
    "Win32_Security_Authorization",
    "Win32_Storage_FileSystem",
] }
